Refactorisation CI/CD: Workflows Dev/Prod séparés
 Nouveau système de workflows:

 Development Workflow (.github/workflows/ci.yml):
 Déclencheurs: develop, feature/*, PR
 Tests rapides et validation code
 Build léger pour développement
 Notifications équipe dev

 Production Workflow (.github/workflows/production.yml):
 Déclencheurs: main, releases
 Tests complets avec services (PostgreSQL, Redis)
 Analyse sécurité approfondie (Bandit, Safety, Trivy)
 Build et publication images Docker optimisées
 Couverture de code et rapports

 Deploy Staging (.github/workflows/deploy-staging.yml):
 Déploiement automatique depuis develop
 Tests de fumée post-déploiement
 Images taguées avec SHA commit

 Avantages:
 Séparation claire dev/prod
 Tests plus rapides en développement
 Validation complète avant production
 Déploiement staging automatique
 Workflows plus maintenables

 Documentation mise à jour avec nouveaux workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Release SaveOS
+name: Create Release
 
 on:
   workflow_dispatch:
@@ -26,6 +26,9 @@ on:
         description: 'Message de release'
         required: false
         default: 'New release'
+  push:
+    branches: [ main ]
+    paths: [ 'VERSION' ]
 
 jobs:
   release:
