--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
-name: CI/CD SaveOS
+name: Development CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ develop, feature/* ]
   pull_request:
-    branches: [ main ]
-  release:
-    types: [ created ]
+    branches: [ develop, main ]
 
 env:
   PYTHON_VERSION: '3.11'
@@ -184,12 +182,12 @@ jobs:
         name: security-report
         path: bandit-report.json
 
-  # Build et publication des artefacts
-  build:
-    name: Build Artefacts
+  # Build léger pour développement
+  build-dev:
+    name: Build Development
     runs-on: ubuntu-latest
-    needs: [test, web-test, docker-test]
-    if: github.ref == 'refs/heads/main'
+    needs: [test, web-test]
+    if: github.ref == 'refs/heads/develop'
     
     steps:
     - name: Checkout code
@@ -200,7 +198,7 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: Build Python package
+    - name: Build Python package (dev)
       run: |
         pip install build
         python -m build
@@ -210,134 +208,38 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
 
-    - name: Build web interface
+    - name: Build web interface (dev)
       working-directory: web
       run: |
         npm ci
         npm run build
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v3
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and push Docker images
-      run: |
-        # Tag avec le SHA du commit
-        TAG=ghcr.io/${{ github.repository_owner }}/saveos:${{ github.sha }}
-        
-        # Build et push des images
-        docker-compose build
-        docker tag saveos_api:latest $TAG-api
-        docker tag saveos_worker:latest $TAG-worker
-        docker tag saveos_web:latest $TAG-web
-        
-        docker push $TAG-api
-        docker push $TAG-worker
-        docker push $TAG-web
-
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: build-artifacts
+        name: dev-build-artifacts
         path: |
           dist/
           web/.next/
 
-  # Release automatique
-  release:
-    name: Release Automatique
-    runs-on: ubuntu-latest
-    needs: [build]
-    if: github.ref == 'refs/heads/main' && contains(github.event.head_commit.message, 'release:')
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-
-    - name: Configure Git
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-
-    - name: Create release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        # Extraire le type de release du message de commit
-        if [[ "${{ github.event.head_commit.message }}" == *"release:major"* ]]; then
-          RELEASE_TYPE="major"
-        elif [[ "${{ github.event.head_commit.message }}" == *"release:minor"* ]]; then
-          RELEASE_TYPE="minor"
-        else
-          RELEASE_TYPE="patch"
-        fi
-        
-        # Créer la release
-        python scripts/version.py bump --type $RELEASE_TYPE --message "Automated release"
-        
-        # Récupérer la nouvelle version
-        NEW_VERSION=$(python scripts/version.py current)
-        
-        # Commit et tag
-        git add .
-        git commit -m "chore: release v$NEW_VERSION"
-        git tag "v$NEW_VERSION"
-        git push origin main --tags
-        
-        # Créer la GitHub release
-        gh release create "v$NEW_VERSION" \
-          --title "SaveOS v$NEW_VERSION" \
-          --notes-file "RELEASE_NOTES_v$NEW_VERSION.md" \
-          --generate-notes
-
-  # Déploiement (pour les environnements de staging/prod)
-  deploy:
-    name: Déploiement
-    runs-on: ubuntu-latest
-    needs: [release]
-    if: startsWith(github.ref, 'refs/tags/v')
-    environment: production
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Deploy to production
-      run: |
-        echo "🚀 Déploiement en production"
-        echo "Version: ${{ github.ref_name }}"
-        # Ici, ajouter les commandes de déploiement spécifiques
-        # Par exemple: kubectl, docker swarm, etc.
 
   # Notification
   notify:
     name: Notifications
     runs-on: ubuntu-latest
-    needs: [test, web-test, docker-test, security]
+    needs: [test, web-test, security]
     if: always()
     
     steps:
     - name: Notify on success
-      if: needs.test.result == 'success' && needs.web-test.result == 'success' && needs.docker-test.result == 'success'
+      if: needs.test.result == 'success' && needs.web-test.result == 'success'
       run: |
-        echo "✅ Tous les tests sont passés!"
+        echo "✅ Tous les tests de développement sont passés!"
         # Ici, ajouter des notifications (Slack, Discord, email, etc.)
 
     - name: Notify on failure
-      if: needs.test.result == 'failure' || needs.web-test.result == 'failure' || needs.docker-test.result == 'failure'
+      if: needs.test.result == 'failure' || needs.web-test.result == 'failure'
       run: |
-        echo "❌ Certains tests ont échoué!"
+        echo "❌ Certains tests de développement ont échoué!"
         # Ici, ajouter des notifications d'échec
