--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -50,19 +50,11 @@ jobs:
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
-    - name: Cache pip dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
-
     - name: Install Python dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov flake8 black isort mypy
+        python -m pip install --upgrade pip --no-cache-dir
+        pip install --no-cache-dir -r requirements.txt
+        pip install --no-cache-dir pytest pytest-cov flake8 black isort mypy
 
     - name: Code quality checks
       run: |
@@ -98,12 +90,10 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: web/package-lock.json
 
     - name: Install dependencies
       working-directory: web
-      run: npm ci
+      run: npm install
 
     - name: Run linting
       working-directory: web
