fix: Corrections Docker et configuration développement
- fix(docker): Ajout dépendances compilation (pkg-config, gcc, libssl-dev)
- fix(docker): Suppression conflit borgbackup requirements.txt
- fix(web): Correction Dockerfile package-lock.json manquant
- fix(css): Remplacement classes Tailwind personnalisées par standards
- feat(dev): Ajout docker-compose.dev.yml et Dockerfile.dev
- fix(scripts): Permissions exécution setup.sh et generate_certs.sh
- chore: Mise à jour .gitignore pour exclure web/.next/

Version: 1.1.1

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,10 +5,9 @@ WORKDIR /app
 
 # Copier les fichiers de package
 COPY package.json ./
-COPY package-lock.json* ./
 
 # Installer les dépendances
-RUN npm ci --only=production
+RUN npm install --only=production
 
 # Copier le code source
 COPY . .
