--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -6,6 +6,12 @@ WORKDIR /app
 # Installer les dépendances système
 RUN apt-get update && apt-get install -y \
     borgbackup \
+    pkg-config \
+    gcc \
+    g++ \
+    libssl-dev \
+    libffi-dev \
+    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copier les fichiers de requirements
