fix: Compatibilité docker-compose local vs GitHub Actions
- GitHub Actions: docker compose (v2+)
- Scripts locaux: docker-compose (v1)
- Résout l'erreur 'docker-compose command not found' en staging

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -31,7 +31,7 @@ jobs:
         TAG=ghcr.io/${{ github.repository_owner }}/saveos:staging-${{ github.sha }}
         
         # Build des images
-        docker-compose build
+        docker compose build
         
         # Tag et push pour staging
         docker tag saveos_api:latest $TAG-api
