--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -159,7 +159,7 @@ jobs:
         WEB_TAG="ghcr.io/${{ github.repository_owner }}/saveos-web:$VERSION"
         
         # Build des images
-        docker-compose build
+        docker compose build
         
         # Tag et push
         docker tag saveos_api:latest $API_TAG
