--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -34,10 +34,15 @@ jobs:
         # Build des images
         docker compose build
         
+        # Récupérer les IDs des images construites
+        API_IMG=$(docker compose images -q api)
+        WORKER_IMG=$(docker compose images -q worker)
+        WEB_IMG=$(docker compose images -q web)
+
         # Tag et push pour staging
-        docker tag saveos_api:latest $TAG-api
-        docker tag saveos_worker:latest $TAG-worker
-        docker tag saveos_web:latest $TAG-web
+        docker tag "$API_IMG" "$TAG-api"
+        docker tag "$WORKER_IMG" "$TAG-worker"
+        docker tag "$WEB_IMG" "$TAG-web"
         
         docker push $TAG-api
         docker push $TAG-worker
