--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -31,22 +31,10 @@ jobs:
         OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
         TAG=ghcr.io/${OWNER_LC}/saveos:staging-${{ github.sha }}
         
-        # Build des images
-        docker compose build
-        
-        # Récupérer les IDs des images construites
-        API_IMG=$(docker compose images -q api)
-        WORKER_IMG=$(docker compose images -q worker)
-        WEB_IMG=$(docker compose images -q web)
-
-        # Tag et push pour staging
-        docker tag "$API_IMG" "$TAG-api"
-        docker tag "$WORKER_IMG" "$TAG-worker"
-        docker tag "$WEB_IMG" "$TAG-web"
-        
-        docker push $TAG-api
-        docker push $TAG-worker
-        docker push $TAG-web
+        # Build & Push direct via Buildx (évite les IDs vides)
+        docker buildx build --file Dockerfile.api --tag "$TAG-api" --push .
+        docker buildx build --file Dockerfile.worker --tag "$TAG-worker" --push .
+        docker buildx build --file web/Dockerfile --tag "$TAG-web" --push web
 
     - name: Deploy to staging environment
       run: |
