--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -227,13 +227,10 @@ jobs:
         COMMIT_SHA=${{ github.sha }}
         OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
         
-        # Build via compose pour s'aligner sur les noms d'images générés
-        docker compose -f docker-compose.prod.yml build
-
-        # Récupérer les IDs d'images construites
-        API_IMG=$(docker compose -f docker-compose.prod.yml images -q api)
-        WORKER_IMG=$(docker compose -f docker-compose.prod.yml images -q worker)
-        WEB_IMG=$(docker compose -f docker-compose.prod.yml images -q web)
+        # Build via compose et récupérer les IDs des images construites (robuste)
+        API_IMG=$(docker compose -f docker-compose.prod.yml build --quiet api)
+        WORKER_IMG=$(docker compose -f docker-compose.prod.yml build --quiet worker)
+        WEB_IMG=$(docker compose -f docker-compose.prod.yml build --quiet web)
 
         # Tag avec version et latest
         docker tag "$API_IMG" ghcr.io/${OWNER_LC}/saveos-api:$VERSION
