--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -159,13 +159,10 @@ jobs:
         WORKER_TAG="ghcr.io/${OWNER_LC}/saveos-worker:$VERSION"
         WEB_TAG="ghcr.io/${OWNER_LC}/saveos-web:$VERSION"
         
-        # Build des images
-        docker compose build
-        
-        # Récupérer les IDs des images construites via Compose
-        API_IMG=$(docker compose images -q api)
-        WORKER_IMG=$(docker compose images -q worker)
-        WEB_IMG=$(docker compose images -q web)
+        # Build et récupérer les IDs des images construites (robuste)
+        API_IMG=$(docker compose build --quiet api)
+        WORKER_IMG=$(docker compose build --quiet worker)
+        WEB_IMG=$(docker compose build --quiet web)
         
         # Tag et push
         docker tag "$API_IMG" "$API_TAG"
