ci(ghcr): activer le push vers GHCR et fiabiliser le tagging d’images
- deploy-staging.yml: permissions packages:write + buildx build --push + OWNER en minuscules
- release.yml: permissions packages:write + OWNER en minuscules + IDs via
- production.yml: permissions packages:write + IDs via

Refs: .github/workflows/deploy-staging.yml, release.yml, production.yml

--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -10,6 +10,9 @@ jobs:
     name: Déploiement Staging
     runs-on: ubuntu-latest
     environment: staging
+    permissions:
+      contents: read
+      packages: write
     
     steps:
     - name: Checkout code
