--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -15,6 +15,8 @@ jobs:
   production-tests:
     name: Tests Production
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     
     services:
       postgres:
@@ -184,6 +186,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [production-tests, web-production-tests, docker-production-tests, security-scan]
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    permissions:
+      contents: read
+      packages: write
     
     steps:
     - name: Checkout code
