--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,9 @@ jobs:
   release:
     name: Créer une Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
     
     steps:
     - name: Checkout code
@@ -123,6 +126,9 @@ jobs:
     name: Release Docker Images
     runs-on: ubuntu-latest
     needs: release
+    permissions:
+      contents: read
+      packages: write
     
     steps:
     - name: Checkout code
